--- a/views/layout.html
+++ b/views/layout.html
@@ -60,7 +60,7 @@
         </div>
     </nav>
     
-    <body class="background">
+    <body class="lightBackground">
         {{include}}
     </body>
 </html>
