--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -4,25 +4,6 @@ html {box-sizing:border-box;}
 *, *:after, *:before {border:0; margin:0; padding:0; box-sizing:inherit;}
 html, body {max-width: 100vw; overflow-x: hidden}
 
-.actionButtons {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    padding-left: 0px;
-    padding-right: 0px;
-    text-align: right;
-    display: inline-block;
-}
-
-.margin10TopBottom {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.image64 {
-    width: 64px;
-    height: 64px;
-}
-
 #editTextJob {
     font-size: 48px;
     font-weight: bold;
@@ -31,10 +12,14 @@ html, body {max-width: 100vw; overflow-x: hidden}
 }
 
 #jobNameErrorText {
-    font-size: 18px;
+    font-size: 24px;
+    font-weight: bold;
     margin-top: 10px;
 }
 
+/*
+    Row and header styles
+*/
 #jobRowHeader {
     padding: 0 !important;
     margin-bottom: 0px !important; 
@@ -60,23 +45,46 @@ html, body {max-width: 100vw; overflow-x: hidden}
     padding-bottom: 5px;
 }
 
+.messageText {
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 100px;
+}
+
+.messageDiv {
+    width: 100%;
+    height: 100px;
+    background: white;
+}
+
+.createJobButton {
+    background-color: rgba(33, 33, 33, 0.75);
+    color: white;
+}
+
+/*
+    Text-related
+*/
 #jobInfoText {
     font-size: 12px;
     font-family: sans-serif;
     color: rgba(32, 32, 32, 0.5);
 }
 
-#createJobContainer {
-    background: white;
-    margin-bottom: 5px;
+#filterText:hover {
+    text-decoration: underline;
 }
 
-.leftSpaced {
-    margin-left: 5px;
-}
-
-.colorful {
-    color: #bb8833;
+/*
+    Job cards
+*/
+.whiteGloss {
+    width: 100%;
+    border-radius: 0px;
+    padding: 12px 2px 12px 2px;
+    padding-bottom: 4px;
+    
+    overflow: hidden;
 }
 
 .roundedCorners {
@@ -87,8 +95,67 @@ html, body {max-width: 100vw; overflow-x: hidden}
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.imageFloatLeft {
+    float: left;
+    margin-left: 8px;
+}
+
+.myTextBottomLeft {
+    padding-left: 12px;
+    padding-right: 12px;
+    font-size: 48px;
+    font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.jobDescription {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 6.4px 10px 6.4px 10px; /* Calculated by hand */
+    color: rgba(0, 0, 0, 0.75);
+    word-wrap: break-word;
     
-    position: relative;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+    height: 2.8em;
+    line-height: 1.4em;
+}
+
+.postedBy {
+    background-color: rgba(33, 33, 33, 0.9);
+    width: 100%;
+    text-align: right;
+}
+
+.postedByText {
+    font-size: 14px;
+    padding: 2px 8px 2px 8px;
+    color: white;
+    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.clear {
+    clear: both;
+}
+
+/*
+    Job creation page
+*/
+#createJobContainer {
+    background: white;
+    margin-bottom: 5px;
 }
 
 .noBottomMargin {
@@ -96,52 +163,48 @@ html, body {max-width: 100vw; overflow-x: hidden}
     word-break: break-all;
 }
 
-#topRightTest {
-    position: absolute;
-    top: 1px;
-    right: 2px;
-    padding: 2px;
+.submitButton {
+    padding: 5px 15px;
+    background: steelblue;
+    color: white;
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
 }
 
-.topButtons {
-    margin: 8px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    width: 100%;
+/*
+    Side panel
+*/
+.cPanel {
+    padding: 15px;
+    background-color: white;  
 }
 
-.noDecoration {
-    text-decoration: none;
-    color: black;
-}
-
-.jobCard {
+.filterByTags {
+    background-color: rgba(247, 247, 249, 1);
+    color: rgba(152, 151, 139, 1);
+    font-size: 12px;
+    padding: 10px 15px 10px 15px;
+    
     cursor: pointer;
 }
 
-.noDecoration:hover {
-    color: rgba(0, 0, 0, 0.25) !important;
+#filterTags {
+    background-color: white;
 }
 
-.spaced {
-    margin-left: 20px;
-    margin-right: 20px;
+#refineResultsDiv {
+    color: #777;
+    padding-top: 8px;
 }
-
-.topButtonIcons {
-    border-radius: 4px;
-    border: 2px solid #000;
-    background-color: grey;
-    margin-bottom: -2px;
-    display: inline-block;
-    color: white;
-}
-
 
 /*
-    https://stackoverflow.com/questions/1120879/css-checkbox-input-styling
+    Custom checkbox
+    
+    Source:
+        https://stackoverflow.com/questions/1120879/css-checkbox-input-styling
 */
-
 input[type=checkbox].checkBox {
     cursor: pointer;
 }
@@ -170,6 +233,21 @@ input[type=checkbox].checkBox:checked:after {
     position: absolute;
     top: -1px;
     left: 5px;
+}
+
+/*
+    Job details
+*/
+#jobDetailsRow {
+    margin-top: 8px;
+    margin-bottom: 35px;
+}
+
+.jobDetailsTextBottomLeft {
+    font-size: 48px;
+    line-height: 72px;
+    font-weight: bold;
+    word-break: break-all;
 }
 
 .closeJobDetails {
@@ -210,165 +288,6 @@ input[type=checkbox].checkBox:checked:after {
     opacity: 0.7;
 }
 
-.pointer {
-    cursor: pointer;
-}
-
-.red {
-    color: rgba(136, 0, 0, 1);
-}
-
-.blue {
-    color: rgba(70, 130, 180, 1);
-}
-
-.cPanel {
-    padding: 15px;
-    background-color: white;  
-}
-
-.filterByTags {
-    background-color: rgba(247, 247, 249, 1);
-    color: rgba(152, 151, 139, 1);
-    font-size: 12px;
-    padding: 10px 15px 10px 15px;
-    
-    cursor: pointer;
-}
-
-#filterText:hover {
-    text-decoration: underline;
-}
-
-#filterTags {
-    background-color: white;
-}
-
-.roundedCorners2 {
-    border-radius: 4px;
-    border: 2px solid #000;
-    background: rgba(0, 0, 0, 0.4);
-    margin: 8px;
-    margin-top: 0px;
-    width: 100%;
-}
-
-.roundedCorners3 {
-    background: rgba(0, 0, 0, 0.4);
-    margin: 8px;
-    margin-top: 0px;
-    width: 100%;
-}
-
-.createJobButton {
-    background-color: rgba(33, 33, 33, 0.75);
-    color: white;
-}
-
-a.first::after {
-  content:'...'
-}
-
-a.last::before {
-  content:'...'
-}
-
-.noSelect {
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
-}
-
-.submitWrapper {
-    white-space: nowrap;
-}
-
-.whiteGloss {
-    width: 100%;
-    border-radius: 0px;
-    padding: 12px 2px 12px 2px;
-    padding-bottom: 4px;
-    
-    overflow: hidden;
-}
-
-.jobHeaderImg {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-
-
-.header {
-    display: inline-block; 
-    width: 100%;
-    margin-top: 10px;
-}
-
-.postedBy {
-    background-color: rgba(33, 33, 33, 0.9);
-    width: 100%;
-    text-align: right;
-}
-
-.postedByText {
-    font-size: 14px;
-    padding: 2px 8px 2px 8px;
-    color: white;
-    
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.textColorWhite {
-    color: #FFF;
-}
-
-.textColorBlack {
-    color: #141414;
-}
-
-.textColorWhiteFaded {
-    color: rgb(255, 255, 255, 0.95);
-}
-
-.textColorBlackFaded {
-    color: rgb(20, 20, 20, 0.95);
-}
-
-
-.myTextBottomLeft {
-    padding-left: 12px;
-    padding-right: 12px;
-    font-size: 48px;
-    font-weight: bold;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.tableData {
-    vertical-align: bottom;
-    color: rgba(0, 0, 0, 0.75);
-}
-
-.jobDetailsTextBottomLeft {
-    font-size: 48px;
-    line-height: 72px;
-    font-weight: bold;
-    word-break: break-all;
-}
-
-.clear {
-    clear: both;
-}
-
 .playerModelLink {
     color: #007bff;
     text-decoration: none;
@@ -392,91 +311,10 @@ a.last::before {
     cursor: pointer;
 }
 
-.jobDescription {
-    font-size: 18px;
+.jobDetailsHeaderText {
+    font-size: 20px;
     font-weight: bold;
-    margin: 6.4px 10px 6.4px 10px; /* Calculated by hand */
-    color: rgba(0, 0, 0, 0.75);
-    word-wrap: break-word;
-    
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    
-    overflow: hidden;
-    text-overflow: ellipsis;
-    
-    height: 2.8em;
-    line-height: 1.4em;
-}
-
-.jobDescription2 {
-    font-size: 18px;
-    font-weight: bold;
-    padding: 8px;
-    color: rgba(0, 0, 0, 0.75);
-    word-wrap: break-word;
-    line-height: 2em;
-}
-
-.formError {
-    color: #b70000;
-    margin-top: 10px;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.comment {
-    margin: 0px 0px 0px 0px;
-    padding: 5px 20px 5px 20px;
-    background-color: white;
-}
-
-.comment_top {
-    background-color: rgba(33, 33, 33, 0.1);
-    padding: 10px;
-    font-size: 12px;
-}
-
-.comment_text {
-    padding: 10px;
-    word-wrap: break-word;
-}
-
-.commentError {
-    color: #b70000;
-    padding: 5px;
-}
-
-
-.padding10TopBottom {
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-
-.marginBottom5 {
-    margin-bottom: 5px !important;
-}
-
-#jobDetailsRow {
-    margin-top: 8px;
-    margin-bottom: 35px;
-}
-
-#refineResultsDiv {
-    color: #777;
-    padding-top: 8px;
-}
-
-.loadMore {
-    color: white;
-    background-color: #383838;
-    width: 100%;
-    padding: 10px;
-}
-
-.background {
-    background: #e2e2e2;
+    margin-bottom: 8px;
 }
 
 #genCodeText {
@@ -504,72 +342,57 @@ a.last::before {
     margin-bottom: 0px;
 }
 
-.messageText {
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 100px;
-}
-
-.messageDiv {
-    width: 100%;
-    height: 100px;
-    background: white;
-}
-
-.descriptionText {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.jobDetailsHeaderText {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 8px;
-}
-
-.imageFloatLeft {
-    float: left;
-    margin-left: 8px;
-}
-
-.darkBackground {
-    background: rgba(32, 32, 32);
-}
-
-.submitButton {
-    padding: 5px 15px;
-    background: steelblue;
-    color: white;
-    border: 0 none;
-    cursor: pointer;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-}
-
-.editButtons {
+.editButton {
     padding: 5px 15px;
     background: #ffffff;
     border-radius: 4px;
     border: 1px solid #2a2a2a; 
 }
 
-
-.roundedTop {
-    border-top-right-radius: 2px;
-    border-top-left-radius: 2px;
+/*
+    Comments
+*/
+.comment {
+    margin: 0px 0px 0px 0px;
+    padding: 5px 20px 5px 20px;
+    background-color: white;
 }
 
-.rounded {
-    border-radius: 2px;
-    border: 2px solid #000;
+.comment_top {
+    background-color: rgba(33, 33, 33, 0.1);
+    padding: 10px;
+    font-size: 12px;
+}
+
+.comment_text {
+    padding: 10px;
+    word-wrap: break-word;
+}
+
+.commentError {
+    color: #b70000;
+    padding: 5px;
+}
+
+.loadMore {
+    color: white;
+    background-color: #383838;
+    width: 100%;
+    padding: 10px;
+}
+
+/*
+    Tables
+*/
+.tableData {
+    vertical-align: bottom;
+    color: rgba(0, 0, 0, 0.75);
 }
 
 table {
-    
 }
 
 tr {
-    
 }
 
 td {
@@ -582,10 +405,15 @@ td.min {
     font-weight: bold;
 }
 
+.descriptionText {
+    font-size: 18px;
+    font-weight: bold;
+}
 
 /** Tabs **/
-
-
+/*
+    Source: https://www.w3schools.com/howto/howto_js_tabs.asp
+*/
 
 /* Style the tab */
 .tab {
@@ -625,4 +453,105 @@ td.min {
     display: none;
     padding: 6px 12px;
     border-top: none;
+}
+
+/*
+    Form error
+*/
+
+.formError {
+    color: #b70000;
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+/*
+    Transitions
+*/
+
+/* Enter and leave animations can use different */
+/* durations and timing functions.              */
+.slide-fade-enter-active {
+    transition: all .3s ease;
+}
+.slide-fade-leave-active {
+    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active below version 2.1.8 */ {
+    transform: translateX(10px);
+    opacity: 0;
+}
+
+/*
+    Other stuff
+*/
+
+.lightBackground {
+    background: #e2e2e2;
+}
+
+.darkBackground {
+    background: rgba(32, 32, 32);
+}
+
+.padding10TopBottom {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.marginBottom5 {
+    margin-bottom: 5px !important;
+}
+
+.margin10TopBottom {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.image64 {
+    width: 64px;
+    height: 64px;
+}
+
+.rounded {
+    border-radius: 2px;
+    border: 2px solid #000;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.red {
+    color: rgba(136, 0, 0, 1);
+}
+
+.blue {
+    color: rgba(70, 130, 180, 1);
+}
+
+.textColorWhite {
+    color: #FFF;
+}
+
+.textColorBlack {
+    color: #141414;
+}
+
+/*
+    Disables text highlighting.
+    
+    Source:
+            https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting
+*/
+.noSelect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
