--- a/views/layout.html
+++ b/views/layout.html
@@ -48,6 +48,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="{{=URL('default', 'user', args='profile')}}">Profile</a>
+                            <a class="dropdown-item" href="{{=URL('default', 'user', args='change_password')}}">Password</a>
                             <a class="dropdown-item" href="{{=URL('default', 'user', args='logout')}}">Logout</a>
                         </div>
                     </li>
