--- a/views/default/user.html
+++ b/views/default/user.html
@@ -12,10 +12,10 @@
             {{
             if request.args(0)=='login':
                 if not 'register' in auth.settings.actions_disabled:
-                    form.add_button(T('Sign Up'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default leftSpaced')
+                    form.add_button(T('Sign Up'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default whiteBackground')
                 pass
                 if not 'request_reset_password' in auth.settings.actions_disabled:
-                    form.add_button(T('Lost Password'),URL(args='request_reset_password'),_class='btn btn-default leftSpaced')
+                    form.add_button(T('Lost Password'),URL(args='request_reset_password'),_class='btn btn-default whiteBackground')
                 pass
             pass
             =form
